Spacing corrected

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,7 +99,7 @@ img {
   padding-right: 45px;
   text-align: center;
   float: left;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 /**
